Make navbar fixed and transparent. Add Contact section. Fix Links
Now the navbar will stay at the top of the screen and user will see content through it. Contact section is added at the bottom of the page and links will now appropriately guide user to right section without navbar covering header.

--- a/style.css
+++ b/style.css
@@ -34,15 +34,14 @@
   }
 
   .nav-bar {
+    position: fixed;
+    z-index: 1000;
     text-align: center;
     padding: 21px;
     margin-top: 45px;
-    width: 450px;
+    width: 490px;
     border-radius: 30px;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 6px 24px 0px, rgba(0, 0, 0, 0.2) 0px 0px 0px 1px;
-    background-color: rgb(255, 255, 255);
-    margin-bottom: 35px;
-   
 }
 
 .nav-bar ul {
@@ -72,6 +71,8 @@
     align-items: center;
     gap: 20px;
     height: 700px;
+    padding-top: 400px;
+    margin-top: -100px;
 }
 
 .greeting-container {
@@ -90,7 +91,6 @@
 .greeting-container h1 {
     font-size: 70px;
     margin-bottom: 5px;
-    
 }
 
 .greeting-container p {
@@ -99,15 +99,23 @@
     width: 520px;
 }
 
+.about-me-section {
+    height: 1200px;
+    margin-top: 600px;
+    padding: 2rem;
+}
+
 .projects-container {
     height: 800px;
     width: 80%;
     text-align: center;
+    margin-top: 200px;
 }
 
-.projects-container h1 {
-    margin-top: 50px;
+.section-headers {
     font-size: 40px;
+    padding-top: 130px;
+    margin-top: -130px;
 }
 
 .project-div-container {
@@ -140,6 +148,7 @@
     position: relative;
     bottom: 15px;
     right: 20px;
+    cursor: pointer;
 }
 
 .project-divs.project-two img {
@@ -159,10 +168,6 @@
     margin-top: 100px;
 }
 
-.resume-section h1 {
-    margin-bottom: 70px;
-    font-size: 40px;
-}
 
 .resume-container {
     display: flex;
@@ -171,5 +176,11 @@
     height: 700px;
     width: 500px;
     box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
+}
+
+.contact-section {
+    height: 2000px;
+    margin-top: 400px;
+    padding: 2rem;
 }
 
